# modele_scoring

./: README.md  lightgbm_fonctions.py  mes_fonctions.py  pyproject.toml
