[project]
name = "modele-scoring2"
version = "0.1.0"
description = ""
authors = [
    {name = "david",email = "david.marivat-larose@orange.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mlflow (>=2.21.2,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "cmake (>=4.0.0,<5.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
